--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     <p>Yolculuklarınızda klima, emniyet kemeri zorunluluğu ve yüksek hijyen standartlarını uyguluyoruz. Araç içi dezenfekte işlemleri haftalık olarak düzenlenmektedir.</p>
                 </div>
                 <div class="quality-item">
-                    <div class="icon-circle"><i class="fas fa-headset"></i></div>-**-*0\-/*---///**********************************************************************************************89+89+89+89+89+89+4848484848484848484848484848484848500000
-                    <h3>Özel02022222222220000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.22222222222n1111111111111111111111111111111111111111111111111111111111111111111 000000000000000000İhtiyaç ve Destek</h3>
+                    <div class="icon-circle"><i class="fas fa-headset"></i></div>
+                    <h3>Özel İhtiyaç ve Destek</h3>
                     <p>Özellikle öğrenci ve hassas taşımacılık hizmetlerinde rehber personel desteği sağlayarak yolcularımızın güvenliğini ve konforunu maksimum seviyede tutuyoruz.</p>
                 </div>
             </div>
@@ -277,4 +277,5 @@
         });
     </script>
 </body>
+
 </html>
