--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Rast Turizm, bölgenin önemli taşımacılık firmalarından biridir. Sektördeki bilgi birikimimizi, dinamik ve genç filomuzla birleştirerek, müşterilerimizin taleplerine en hızlı ve en güvenilir çözümleri sunmayı ilke edindik. Faaliyetlerimizde müşteri memnuniyetini, maksimum güvenliği ve çevreye saygıyı temel alıyoruz. Kurumsal taşımacılıkta yeni nesil çözümlerin adresi olmak için çalışıyoruz.</p>
             </div>
             <div class="image-content">
-                <img src="images/about.jpg" alt="Rast Filosu" class="rounded-img shadow-lg">
+                <img src="images/image11.jpg" alt="Rast Filosu" class="rounded-img shadow-lg">
             </div>
         </div>
     </section>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="service-card">
                     <i class="fas fa-car-side icon-blue"></i>
-                    <h4>Lojistik ve Nakliye Hizmeti</h4>
+                    <h3>Lojistik ve Nakliye Hizmeti</h3>
                     <p>Tüm değerli yükleriniz için sigortalı, hızlı ve garantili şehir içi/şehirlerarası nakliye çözümlerimizle operasyonel yükünüzü hafifletiyoruz.</p>
                     <a href="#contact" class="btn-small">Teklif Al</a>
                 </div>
@@ -138,7 +138,7 @@
                 <ul class="contact-details">
                     <li><i class="fas fa-phone-alt"></i> <a href="tel:+905384315903">+90 538 431 59 03</a></li>
                     <li><i class="fas fa-envelope"></i> <a href="mailto:info@rastturizm.com">info@rastturizm.com</a></li>
-                    <li><i class="fas fa-map-marker-alt"></i> Çayırova, Kocaeli / Türkiye</li>
+                    <li><i class="fas fa-map-marker-alt"></i> Atatürk Mahallesi, 368. Sokak, No: 17, Çayırova / Kocaeli</li>
                 </ul>
 
                 <div class="social-links">
@@ -170,7 +170,7 @@
     <section class="map-section">
         <div class="map-container">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d188.73145103741575!2d29.383938407687374!3d40.8125151028451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDDCsDQ4JzQ1LjQiTiAyOcKwMjMnMDEuOSJF!5e0!3m2!1str!2str!4v1760707050039!5m2!1str!2str"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3018.506904360298!2d29.384447676418493!3d40.83879332984318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cadf316c1fe64f%3A0xfa6d061a30c6ba98!2zQXRhdMO8cmssIDM2OC4gU2suIE5vOjE3LCA0MTQyMCDDh2F5xLFyb3ZhL0tvY2FlbGk!5e0!3m2!1str!2str!4v1762270090858!5m2!1str!2str"
                 width="100%"
                 height="450"
                 style="border:0;"
@@ -180,7 +180,7 @@
             </iframe>
         </div>
         <div class="max-width map-cta-area">
-             <a href="https://www.google.com/maps/dir/?api=1&destination=40.812515,29.383938" target="_blank" class="btn btn-map">
+             <a href="https://www.google.com/maps/dir/?api=1&destination=40.83895969840019,29.3870226061999" target="_blank" class="btn btn-map">
                 <i class="fas fa-directions"></i> Yol Tarifi Al
             </a>
         </div>
@@ -277,5 +277,4 @@
         });
     </script>
 </body>
-
 </html>
