--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="navbar-container">
         <nav class="navbar max-width">
             <a href="#home" class="logo-area">
-                <img src="images/logo.png" alt="Rast Turizm Logo" class="logo-img">
+                <img src="images/logo1.png" alt="Rast Turizm Logo" class="logo-img">
             </a>
 
             <ul id="menu" class="desktop-menu">
@@ -278,3 +278,4 @@
     </script>
 </body>
 </html>
+
