--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <form id="contactForm" class="contact-form shadow-lg" action="https://formspree.io/f/mqagyona" method="POST">
+            <form id="contactForm" class="contact-form shadow-lg" action="https://formspree.io/f/xldoykrz" method="POST">
                 <h3>Hızlı Teklif Formu</h3>
                 <input type="text" placeholder="Ad Soyad *" required name="ad_soyad">
                 <input type="email" placeholder="E-posta *" required name="eposta">
@@ -278,5 +278,6 @@
     </script>
 </body>
 </html>
+
 
 
