--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
                 </ul>
 
                 <div class="social-links">
-                    <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/rastturizm" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank" aria-label="Linkedin"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
 
@@ -278,6 +277,7 @@
     </script>
 </body>
 </html>
+
 
 
 
