--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rast Turizm | Güvenli ve Konforlu Taşımacılık Çözümleri</title>
+    <title>Rast Turizm | Güvenli ve Konforlu Taşımacılık</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico" sizes="any">
+    <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
 
@@ -224,9 +226,7 @@
             }
         });
 
-        // ===================================
-        // YENİ FORM GÖNDERİM KODU (AJAX)
-        // ===================================
+        
         const form = document.getElementById('contactForm');
         const successMessage = document.getElementById('success-message');
         const submitButton = form.querySelector('.btn-submit');
@@ -277,8 +277,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
