--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Rast Turizm | Güvenli ve Konforlu Taşımacılık</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/favicon.ico" sizes="any">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 
@@ -277,3 +277,4 @@
     </script>
 </body>
 </html>
+
