--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p>İhtiyaçlarınız için en uygun ve en ekonomik çözümleri sunmaya hazırız. Hemen iletişime geçin.</p>
                 
                 <ul class="contact-details">
-                    <li><i class="fas fa-phone-alt"></i> <a href="tel:+905384315903">+90 538 431 59 03</a></li>
+                    <li><i class="fas fa-phone-alt"></i> <a href="tel:+905384315903">0538 431 5903 - 0533 296 9539</a></li>
                     <li><i class="fas fa-envelope"></i> <a href="mailto:info@rastturizm.com">info@rastturizm.com</a></li>
                     <li><i class="fas fa-map-marker-alt"></i> Atatürk Mahallesi, 368. Sokak, No: 17, Çayırova / Kocaeli</li>
                 </ul>
@@ -277,4 +277,5 @@
     </script>
 </body>
 </html>
+
 
